--- a/day03-html-css/day03_in_class_notes.html
+++ b/day03-html-css/day03_in_class_notes.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Testing new Emmet Commands</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia velit veniam, labore commodi neque repudiandae, temporibus nisi et sint modi totam aut similique, possimus ipsam nesciunt quia soluta vitae! Doloribus! <br><br>
+    Animi, blanditiis nobis fuga voluptatibus non repellat, nam quaerat assumenda iusto unde ullam at dolor repellendus illum tempora consequuntur! Velit fuga natus ullam culpa repellendus perspiciatis voluptates blanditiis deserunt maiores?<br><br>
+    Repudiandae impedit numquam placeat provident nostrum est nisi sapiente fuga, doloribus voluptatum repellendus dolor iusto quos ullam assumenda modi possimus natus corporis incidunt ea? Nostrum delectus porro ducimus neque iste.</p>
+    <nav>
+        <ul>
+            <li><a href="">Page 1</a></li>
+            <li><a href="">Page 2</a></li>
+            <li><a href="">Page 3</a></li>
+            <li><a href="">Page 4</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
