--- a/day03-html-css/linking-pages/about.html
+++ b/day03-html-css/linking-pages/about.html
@@ -8,6 +8,7 @@
 <body>
     <h1>This is a page that has more about me!!</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero earum labore animi, est pariatur totam deserunt consectetur esse aperiam minus assumenda nesciunt laboriosam maxime possimus saepe tempora officiis quidem! Explicabo.</p>
-    
+    <a href="index.html">Go Home</a>
+    <a href="../forms/form_intro.html">Form Intro</a>
 </body>
 </html>
