--- a/day03-html-css/linking-pages/index.html
+++ b/day03-html-css/linking-pages/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <!-- header>nav>ul>li*4-->
+     <header>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+     </header>
     
 
     <!--h1{Welcome to my Portfolio}-->
